# lillorepo

./: .bazelrc  .gitignore  AGENTS.md  CLAUDE.md  INFRA.md  LICENSE  MODULE.bazel  PENDING.md  README.md  STATUS.md  WORKSPACE  firestore.indexes.json  requirements.in  requirements_lock.txt
.claude/: CLAUDE.md
.claude/hooks/global/: README.md  git-destructive-guard.py  statusline.sh
.claude/plans/: biwenger_api_refactor.md  firestore_pickup.md  next_phases.md  teams_analyzer_rewrite.md
.claude/skills/: GOOGLE-SKILLS-LICENSE.md
.claude/skills/add-python-dep/: SKILL.md
.claude/skills/check-deps/: SKILL.md  check_deps.sh
.claude/skills/check-deps/scripts/: check_deps.sh
.claude/skills/jira-cli/: SKILL.md
.claude/skills/jira-cli/references/: authentication.md  commands.md  error-handling.md  hierarchy.md
.claude/skills/release-notes/: SKILL.md
.claude/skills/rpi-common/: ensure-rpi-dirs.sh
.claude/skills/rpi-common/scripts/: check-plannotator.sh
.claude/skills/rpi-implement/: SKILL.md
.claude/skills/rpi-plan/: SKILL.md
.claude/skills/rpi-research/: SKILL.md
.claude/skills/season-rollover/: SKILL.md
.claude/skills/season-rollover/scripts/: fetch_palmares.py
.gemini/: GEMINI.md  cli-config.md
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  deploy-watchdog.yml  deploy.yml
core/: BUILD.bazel  constants.py  requirements.txt  utils.py
core/domain/: __init__.py  models.py
core/sdk/: biwenger.py  firestore.py  gcp.py  gemini.py  http.py  jp.py  telegram.py
core/tests/: conftest.py  constants.py  test_biwenger_client.py  test_domain_models.py  test_firestore_sdk.py  test_gcp_services.py  test_gemini.py  test_http_retry.py  test_jp.py  test_telegram_notifier.py  test_utils.py  test_web.py
core/tests/data/: account_response.json  league_users.json
core/web/: ratelimit.py
docker/: Dockerfile.base  README.md
docs/: README.md  TODO.md  firestore.md  gcp.md  operations.md  project_pitch.md  release-notes.md
docs/setup/: linter.md  mac-setup.md
docs/setup/ai/: claude-code-setup.md  google-skills.md  mcp-setup.md  pi-setup.md  rtk-setup.md
docs/technical/ai/: claude-code-director-workflow.md  claude-code-roadmap.md  ralph-wiggum-methodology.md
docs/technical/backend/: python-best-practices.md
docs/technical/migration/: retrofit-patterns.md
docs/technical/reverse-engineering/: frida-android-intercept.md
docs/technical/reverse-engineering/scripts/: extract_token.sh  jp_intercept.js
memory/: project_firestore_migration.md
scripts/: backfill_firestore.py  biwenger_check_categorias.py  biwenger_firestore_surgery.py  biwenger_recategorise.py  biwenger_rename_team.py  check-gcp-costs.sh  clean-images-artifact.sh  lint.sh  refresh-aesan-snapshot.py  sync-google-skills.sh
tools/: extensions.bzl
tools/bazel/: BUILD.bazel  biwenger_service.bzl  python_service.bzl
tools/lint/: BUILD.bazel
