# --- MÓDULO PRINCIPAL ---
module(
    name = "biwenger-tools",
    version = "1.0",
)

# Dependencias de reglas de Bazel
bazel_dep(name = "rules_python", version = "2.0.0")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "platforms", version = "1.1.0")

# --- TOOLCHAINS Y DEPENDENCIAS DE PYTHON ---
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)
use_repo(python, python_toolchain = "python_3_12")

# Se utiliza la extensión pip para gestionar las dependencias de Python
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")

# --- IMÁGENES BASE DE DOCKER ---
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Imagen base CON TODAS las dependencias preinstaladas (para producción)
oci.pull(
    name = "python_with_deps",
    digest = "sha256:a4e1848751ff5f326a2ad10df2c559241e9750907164cf020165aec706432ae5",
    image = "europe-southwest1-docker.pkg.dev/biwenger-tools/biwenger-docker/python-base",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "python_with_deps", "python_with_deps_linux_amd64", "python_with_deps_linux_arm64")
