load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

py_library(
    name = "core",
    srcs = glob(
        ["**/*.py"],
        exclude = ["tests/**/*.py"],
    ),
    deps = [
        "@pypi//requests",
        "@pypi//google_api_python_client",
        "@pypi//google_auth_oauthlib",
        "@pypi//google_auth",
        "@pypi//pytz",
        "@pypi//python_dateutil",
    ],
    visibility = ["//visibility:public"],
)

# Exportar como tar preservando estructura
pkg_tar(
    name = "core_srcs",
    srcs = glob(
        ["**/*.py"],
        exclude = ["tests/**/*.py"],
    ),
    package_dir = "/",  # ⬅️ raíz absoluta
    strip_prefix = "core",  # ⬅️ quita la carpeta 'core' del path para que se cree /core/... en el tar
    visibility = ["//visibility:public"],
)

py_test(
    name = "core_tests",
    timeout = "short",
    main = "tests/main.py",
    srcs = glob(["tests/**/*.py"]),
    data = glob(["tests/data/*.json"]),
    deps = [
        ":core",
        "@pypi//pytest",
        "@pypi//requests_mock",
    ],
)