"""Hermetic lint binaries — black and flake8 via Bazel's Python 3.13 toolchain.

Why these exist:
- CI uses Python 3.13 (see `MODULE.bazel`).
- Local devs may have a different system Python (3.12 on the maintainer's Mac).
- Black 26.3.1's tokenizer behaviour shifts subtly between Python versions, so
  running `python3 -m black` locally can produce output that CI rejects.
- These targets run with the exact same toolchain CI uses, removing the drift.

Usage:
  bazel run //tools/lint:black -- --check core/ packages/
  bazel run //tools/lint:flake8 -- core/ packages/

Most callers should use the wrapper script `scripts/lint.sh` instead.
"""

load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

py_console_script_binary(
    name = "black",
    pkg = "@pypi//black",
)

py_console_script_binary(
    name = "flake8",
    pkg = "@pypi//flake8",
)
